force-app/main/default/objects/ProductSpecification__c/fields/SubstationVoltage__c.field-meta.xml
<CustomField>
    <fullName>SubstationVoltage__c</fullName>
    <label>受電電圧</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>154kV</fullName>
            </value>
            <value>
                <fullName>110kV</fullName>
            </value>
            <value>
                <fullName>66/77ｋV</fullName>
            </value>
            <value>
                <fullName>22/33ｋV</fullName>
            </value>
            <value>
                <fullName>3/6ｋV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>