force-app/main/default/objects/ProductSpecification__c/fields/TMCompetitors__c.field-meta.xml
<CustomField>
    <fullName>TMCompetitors__c</fullName>
    <label>TMEIC-PCS技術提案メーカー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>日立製作所</fullName>
            </value>
            <value>
                <fullName>東芝</fullName>
            </value>
            <value>
                <fullName>明電舎</fullName>
            </value>
            <value>
                <fullName>日新電機</fullName>
            </value>
            <value>
                <fullName>ＧＳユアサ</fullName>
            </value>
            <value>
                <fullName>海外メーカー</fullName>
            </value>
            <value>
                <fullName>その他フリー項目</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>