force-app/main/default/objects/ProductSpecification__c/fields/TRCapacity__c.field-meta.xml
<CustomField>
    <fullName>TRCapacity__c</fullName>
    <label>TR容量（kVA）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>