force-app/main/default/objects/ProductSpecification__c/fields/TRManufacturer__c.field-meta.xml
<CustomField>
    <fullName>TRManufacturer__c</fullName>
    <label>TRメーカー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>赤穂</fullName>
            </value>
            <value>
                <fullName>名電</fullName>
            </value>
            <value>
                <fullName>ベンダーフリー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>