force-app/main/default/objects/ProductSpecification__c/fields/TRQuantity__c.field-meta.xml
<CustomField>
    <fullName>TRQuantity__c</fullName>
    <label>TR台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>