force-app/main/default/objects/ProductSpecification__c/fields/Type01__c.field-meta.xml
<CustomField>
    <fullName>Type01__c</fullName>
    <label>タイプ（自製）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>