force-app/main/default/objects/ProductSpecification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>TR種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>油</fullName>
            </value>
            <value>
                <fullName>ガス</fullName>
            </value>
            <value>
                <fullName>モールド</fullName>
            </value>
            <value>
                <fullName>植物油</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>