force-app/main/default/objects/ProductSpecification__c/fields/V2HCompetitors__c.field-meta.xml
<CustomField>
    <fullName>V2HCompetitors__c</fullName>
    <label>V2H技術提案メーカー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ニチコン</fullName>
            </value>
            <value>
                <fullName>アイケイエス</fullName>
            </value>
            <value>
                <fullName>海外メーカー</fullName>
            </value>
            <value>
                <fullName>その他フリー項目</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>