force-app/main/default/objects/ProductSpecification__c/fields/V2HCompetitorsFree__c.field-meta.xml
<CustomField>
    <fullName>V2HCompetitorsFree__c</fullName>
    <label>競合先フリー項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>