force-app/main/default/objects/ProductSpecification__c/fields/Voltage1__c.field-meta.xml
<CustomField>
    <fullName>Voltage1__c</fullName>
    <label>電圧</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>200V</fullName>
            </value>
            <value>
                <fullName>400V</fullName>
            </value>
            <value>
                <fullName>6600V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>