force-app/main/default/objects/ProductSpecification__c/fields/WC1__c.field-meta.xml
<CustomField>
    <fullName>WC1__c</fullName>
    <label>WC1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>