force-app/main/default/objects/ProductSpecification__c/fields/WC2__c.field-meta.xml
<CustomField>
    <fullName>WC2__c</fullName>
    <label>WC2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>