force-app/main/default/objects/ProductSpecification__c/recordTypes/BuildingSystem.recordType-meta.xml
<RecordType>
    <fullName>BuildingSystem</fullName>
    <active>true</active>
    <label>04,ビルシ</label>
</RecordType>