force-app/main/default/objects/ProductSpecification__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>07,その他</label>
</RecordType>