force-app/main/default/objects/ProductSpecification__c/recordTypes/PrivatePowerGeneration.recordType-meta.xml
<RecordType>
    <fullName>PrivatePowerGeneration</fullName>
    <active>true</active>
    <label>03,自家発</label>
</RecordType>