force-app/main/default/objects/ProductSpecification__c/recordTypes/PV.recordType-meta.xml
<RecordType>
    <fullName>PV</fullName>
    <active>true</active>
    <label>06,PVスマエネ</label>
</RecordType>