force-app/main/default/objects/ProductSpecification__c/recordTypes/Substation.recordType-meta.xml
<RecordType>
    <fullName>Substation</fullName>
    <active>true</active>
    <label>01,受変電</label>
</RecordType>