force-app/main/default/objects/ProductSpecification__c/recordTypes/UPS.recordType-meta.xml
<RecordType>
    <fullName>UPS</fullName>
    <active>true</active>
    <label>02,UPS</label>
</RecordType>