force-app/main/default/objects/ProductSpecification__c/recordTypes/Video.recordType-meta.xml
<RecordType>
    <fullName>Video</fullName>
    <active>true</active>
    <label>05,映像</label>
</RecordType>