force-app/main/default/objects/ProductSpecification__c/validationRules/BatteryTypeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BatteryTypeCheck</fullName>
    <active>true</active>
    <description>蓄電池種類が、その他の場合、蓄電池種類＿その他に入力がないとエラー</description>
    <errorConditionFormula>AND(
    ISPICKVAL( BatteryType__c , &apos;その他&apos;),
    BatteryTypeOther__c = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>BatteryTypeOther__c</errorDisplayField>
    <errorMessage>蓄電池種類が、その他の場合、蓄電池種類＿その他に入力して下さい</errorMessage>
</ValidationRule>