force-app/main/default/objects/ProductSpecification__c/validationRules/dBCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>dBCheck</fullName>
    <active>true</active>
    <description>騒音（dB）が、その他の場合、騒音値（dB）＿その他に入力がないとエラー</description>
    <errorConditionFormula>AND(
    ISPICKVAL(   dB__c  , &apos;その他&apos;),
    dBOther__c  = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>dBOther__c</errorDisplayField>
    <errorMessage>騒音（dB）が、その他の場合、騒音値（dB）＿その他に入力して下さい</errorMessage>
</ValidationRule>