force-app/main/default/objects/ProductSpecification__c/validationRules/DrivingTimeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DrivingTimeCheck</fullName>
    <active>true</active>
    <description>運転時間がその他の場合、その他欄に入力がないとエラー。</description>
    <errorConditionFormula>AND(
    ISPICKVAL( DrivingTime__c  , &apos;その他&apos;),
    DrivingTimeOther__c  = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>DrivingTimeOther__c</errorDisplayField>
    <errorMessage>運転時間がその他の場合、運転時間＿その他に入力して下さい</errorMessage>
</ValidationRule>