force-app/main/default/objects/ProductSpecification__c/validationRules/ExhaustSilencerCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ExhaustSilencerCheck</fullName>
    <active>true</active>
    <description>排気消音器が、その他の場合、排気消音器＿その他に入力がないとエラー</description>
    <errorConditionFormula>AND(
    ISPICKVAL( ExhaustSilencer__c   , &apos;その他&apos;),
    ExhaustSilencerOther__c   = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>ExhaustSilencerOther__c</errorDisplayField>
    <errorMessage>排気消音器が、その他の場合、排気消音器＿その他に入力して下さい</errorMessage>
</ValidationRule>