force-app/main/default/objects/ProductSpecification__c/validationRules/LoadApplicationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>LoadApplicationCheck</fullName>
    <active>true</active>
    <description>負荷用途が、その他の場合、負荷用途＿その他に入力がないとエラー</description>
    <errorConditionFormula>AND(
    ISPICKVAL( LoadApplication__c  , &apos;その他&apos;),
    LoadApplicationOther__c  = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>LoadApplicationOther__c</errorDisplayField>
    <errorMessage>負荷用途が、その他の場合、負荷用途＿その他に入力して下さい</errorMessage>
</ValidationRule>