force-app/main/default/objects/ProductSpecification__c/validationRules/NumberOfParallelOperationDows.validationRule-meta.xml
<ValidationRule>
    <fullName>NumberOfParallelOperationDows</fullName>
    <active>true</active>
    <description>機器仕様（自家発）レコードタイプ内の［運転方式］で並列運転を選んだら「並列運転台数」を必ず入力させる。</description>
    <errorConditionFormula>AND(   
    TEXT(RunningType__c ) =  &quot;並列運転&quot; ,  
    ISBLANK(NumberOfParallelOperationDows__c  ),
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorMessage>並列運転台数を入力してください。</errorMessage>
</ValidationRule>