force-app/main/default/objects/ProductSpecification__c/validationRules/OperatingConditionsCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>OperatingConditionsCheck</fullName>
    <active>true</active>
    <description>運転条件が、その他の場合、運転条件＿その他に入力がないとエラー</description>
    <errorConditionFormula>AND(
    ISPICKVAL( OperatingConditions__c  , &apos;その他&apos;),
    OperatingConditionsOther__c  = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>OperatingConditionsOther__c</errorDisplayField>
    <errorMessage>運転条件が、その他の場合、運転条件＿その他に入力して下さい</errorMessage>
</ValidationRule>