force-app/main/default/objects/ProductSpecification__c/validationRules/PlaceToSetCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>PlaceToSetCheck</fullName>
    <active>true</active>
    <description>設置場所にが屋内の場合、階数に入力がないとエラーとする。</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PlaceToSet__c , &apos;屋内&apos;),
    Floors__c = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>Floors__c</errorDisplayField>
    <errorMessage>設置場所が屋内の場合、階数を入力して下さい</errorMessage>
</ValidationRule>