force-app/main/default/objects/ProductSpecification__c/validationRules/RunningTypeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>RunningTypeCheck</fullName>
    <active>true</active>
    <description>運転方式が、発電機同志の並列運転（●台）の場合、並列運転台数に入力がないとエラー</description>
    <errorConditionFormula>AND(
    ISPICKVAL( RunningType__c  , &apos;発電機同志の並列運転（●台）&apos;),
    NumberOfParallelOperationDows__c  = null,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>NumberOfParallelOperationDows__c</errorDisplayField>
    <errorMessage>運転方式が、発電機同志の並列運転（●台）の場合、並列運転台数に入力して下さい</errorMessage>
</ValidationRule>