force-app/main/default/objects/ProductSpecification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>