force-app/main/default/objects/ProductSpecification__c/listViews/X06_PV.listView-meta.xml
<ListView>
    <fullName>X06_PV</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <columns>Product2Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProductSpecification__c.PV</value>
    </filters>
    <label>06.PVスマエネ</label>
</ListView>