force-app/main/default/objects/ProductSpecification__c/listViews/X07other.listView-meta.xml
<ListView>
    <fullName>X07other</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <columns>Product2Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProductSpecification__c.Other</value>
    </filters>
    <label>07.その他</label>
</ListView>