force-app/main/default/objects/ProductSpecification__c/listViews/X10.listView-meta.xml
<ListView>
    <fullName>X10</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <columns>Product2Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProductSpecification__c.Substation</value>
    </filters>
    <label>01.受変電</label>
</ListView>