force-app/main/default/objects/ProductSpecification__c/listViews/X11_UPS.listView-meta.xml
<ListView>
    <fullName>X11_UPS</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <columns>Product2Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProductSpecification__c.UPS</value>
    </filters>
    <label>02.UPS</label>
</ListView>