force-app/main/default/objects/ProductSpecification__c/listViews/X13.listView-meta.xml
<ListView>
    <fullName>X13</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <columns>Product2Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProductSpecification__c.PrivatePowerGeneration</value>
    </filters>
    <label>04.ビルシ</label>
</ListView>