force-app/main/default/objects/ProductSpecification__c/listViews/X14.listView-meta.xml
<ListView>
    <fullName>X14</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <columns>Product2Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProductSpecification__c.Video</value>
    </filters>
    <label>05.映像</label>
</ListView>