force-app/main/default/objects/ProductSpecification__c/listViews/X14ProductSpecification.listView-meta.xml
<ListView>
    <fullName>X14ProductSpecification</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Factory1__c</columns>
    <columns>Product2Id__c</columns>
    <columns>EquipmentDeliveryTime__c</columns>
    <columns>ConstructionDistinction__c</columns>
    <columns>Opp5__c</columns>
    <columns>Factorys__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductSpecificationOwnersDivision__c</field>
        <operation>equals</operation>
        <value>05_中部支社</value>
    </filters>
    <label>14.中部支社の機器仕様</label>
</ListView>