force-app/main/default/objects/ProductSpecification__c/listViews/X15_PV.listView-meta.xml
<ListView>
    <fullName>X15_PV</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProductSpecification__c.PV</value>
    </filters>
    <label>15.PVスマエネ</label>
</ListView>